-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.5.0-beta
-
None
Using macros messes up the highlighting. See the attached images.
- replaces
-
QTCREATORBUG-10153 Members for class resolved by a macro are not always recognized
-
- Closed
-
-
QTCREATORBUG-6628 Parser: Strange behavior with enums
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-7255 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 20331,4 | C++: Allow macro expansion in FastPreprocessor. | master | qt-creator/qt-creator | Status: DEFERRED | 0 | 0 |
| 103751,5 | C++: Allow macro expansion in FastPreprocessor. | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
| 114520,1 | C++: Allow macro expansion in FastPreprocessor | 3.4 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 151451,2 | C++: Allow macro expansion in FastPreprocessor. | 4.0 | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |