Allow macro expansion in FastPreprocessor.

This is required to properly highlight code were the enclosing method
definition is generated.

Task-number: QTCREATORBUG-7255
Change-Id: I2d28270563eebb495b82fac8ec23346c98e859f9