src/libs/cplusplus/FastPreprocessor.cpp
@@ -57,7 +57,7 @@ QByteArray FastPreprocessor::run(Document::Ptr newDoc, const QByteArray &source)
 {
     std::swap(newDoc, _currentDoc);
     const QString fileName = _currentDoc->fileName();
-    _preproc.setExpandFunctionlikeMacros(false);
+    _preproc.setExpandFunctionlikeMacros(true);
     _preproc.setKeepComments(true);
 
     if (Document::Ptr doc = _snapshot.document(fileName)) {
