src/plugins/cpptools/cpplocalsymbols.cpp
@@ -47,6 +47,7 @@ public:
 
     // local and external uses.
     SemanticInfo::LocalUseMap localUses;
+    QHash<CPlusPlus::Symbol *, QSet<QPair<int,int>>> m_processed;
 
     void operator()(DeclarationAST *ast)
     {
@@ -85,6 +86,9 @@ protected:
                         const Token token = tokenAt(member->sourceLocation());
                         unsigned line, column;
                         getPosition(token.utf16charsBegin(), &line, &column);
+                        if (m_processed[member].contains(qMakePair(line, column)))
+                            continue;
+                        m_processed[member].insert(qMakePair(line, column));
                         localUses[member].append(
                                     HighlightingResult(line, column, token.utf16chars(),
                                                        SemanticHighlighter::LocalUse));
@@ -109,6 +113,9 @@ protected:
                                                    || member->enclosingScope()->isFunction())) {
                         unsigned line, column;
                         getTokenStartPosition(simpleName->identifier_token, &line, &column);
+                        if (m_processed[member].contains(qMakePair(line, column)))
+                            continue;
+                        m_processed[member].insert(qMakePair(line, column));
                         localUses[member].append(
                                     HighlightingResult(line, column, token.utf16chars(),
                                                        SemanticHighlighter::LocalUse));
